# TimeTracker2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
include/appservice/: ActivityMonitor.h  AppController.h  ReminderScheduler.h  SessionManager.h
include/domain/: UserPreferences.h  WorkSession.h
include/idle/: IIdleDetector.h  IdleDetectorFactory.h  MacIdleDetector.h  WinIdleDetector.h
include/infra/: AppSettingsRepository.h  SessionLogRepository.h
include/ui/: MainWindow.h  TimeTrackerPanel.h
resources/styles/: app.qss
src/: ActivityMonitor.cpp  ActivityMonitor.h  AppController.cpp  AppController.h  AppSettingsRepository.cpp  IdleDetectorFactory.cpp  MacIdleDetector.cpp  MainWindow.cpp  ReminderScheduler.cpp  ReminderScheduler.h  SessionLogRepository.cpp  SessionManager.cpp  TimeTrackerPanel.cpp  TrayIconController.cpp  WinIdleDetector.cpp  WorkSession.cpp
src/persist/: AppSettings.cpp  AppSettings.h  SettingsPage.cpp  SettingsPage.h
src/ui/: BaseCardPage.cpp  BaseCardPage.h  ClickableSvgWidget.cpp  ClickableSvgWidget.h  Export2.cpp  Export2.h  ExportPage.cpp  ExportPage.h  GradientFrame.h  InlineEditableLabel.cpp  InlineEditableLabel.h  LogHistoryPage.cpp  LogHistoryPage.h  MainMenuPage.cpp  MainMenuPage.h  MainWindow.cpp  NewItemDialog.cpp  NewItemDialog.h  SettingsPage.cpp  SettingsPage.h  SideTab.cpp  SideTab.h  TimeTrackerPanel.cpp  TimeTrackerPanel.h  TrackWorkSetupPage.cpp  TrackWorkSetupPage.h  TrackWorkTimerPage.cpp  TrackWorkTimerPage.h  TrayIconController.cpp  TrayIconController.h  UiElemStyler.cpp  UiElemStyler.h  UiFlowController.cpp  UiFlowController.h
